--- a/Flip/app/src/main/AndroidManifest.xml
+++ b/Flip/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.geralt.flip">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +19,7 @@
         </activity>
         <activity android:name=".About" android:label="@string/titulo_about"/>
         <activity android:name=".HowTo" android:label="@string/titulo_howto"/>
+        <activity android:name=".GameField"/>
     </application>
 
 </manifest>
